OPENAM-8889 Fix invisible buttons on Safari

--- a/forgerock-ui-commons/src/main/resources/css/common/forms.less
+++ b/forgerock-ui-commons/src/main/resources/css/common/forms.less
@@ -57,7 +57,7 @@ select.invalid:focus  {
 }
 
 
-input.read-only, input:read-only, input[type="text"]:focus:read-only, input[type="email"]:focus:read-only{
+input.read-only, input:read-only, input:not[type="submit"], input[type="text"]:focus:read-only, input[type="email"]:focus:read-only {
     background: transparent;
     box-shadow:none;
     border:1px solid @input-border-basic;
